<resources>
    <string name="app_name">KMIDS Mobile</string>
    <string name="text_version">version 1.1.10</string>

    <string name="channel_id">status01</string>
    <string name="channel_name">statust_bus</string>
    <string name="channel_decription">statust_bus_notifications</string>

    <string name="title_notification_message">Bus Status Change</string>

    <string name="finger_title">Access to KMIDS Mobile</string>
    <string name="finger_sub_title">Scan to access Or cancel to enter password</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bus">School Bus</string>
    <string name="title_dashboard">Setting</string>
    <string name="title_notifications">Logout</string>
    <string name="title_confirm_logout">Press again to close the app.</string>

    <string name="title_exite">close app</string>

    <!-- Welcome -->
    <string name="text_title_welcome">KMIDS Registration</string>
    <string name="text_sub_title_welcome">Please enter your information</string>

    <!-- Setting Pin -->
    <string name="text_title_input_pin">Create new password</string>
    <string name="text_title_input_pin2">Confirm new password</string>
    <string name="text_check_match_pin">Passwords do not match</string>
    <string name="text_msg_create_pin_success">Create PIN success</string>

    <!-- Lock Pin -->
    <string name="text_title_lock_pin">Please enter password</string>
    <string name="text_error_lock_pin">Password is incorrect</string>
    <string name="text_ok_button">Ok</string>
    <string name="text_cancel_button">Cancel</string>
    <string name="text_forgot_pass">Forgot password</string>

    <!-- Home -->
    <string name="text_home_title">Student list</string>
    <string name="text_alert_message">Confirm acceptance of students</string>
    <string name="text_button_accept">Confirm arrival</string>
    <string name="text_error_area">Your location is not in the designated area.</string>

    <string name="text_change_password">Change password</string>
    <string name="text_on_touch_id">Login with Touch ID</string>

    <string name="text_input_phoneorcardid">Enter ID card number / phone number</string>
    <string name="text_next">Next</string>

    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
</resources>