<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.paiwaddev.kmids.kmidsmobile.view.ui.home.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bus"
        android:name="com.paiwaddev.kmids.kmidsmobile.view.ui.home.bus.BusFragment"
        android:label="@string/title_bus"
        tools:layout="@layout/fragment_bus" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.paiwaddev.kmids.kmidsmobile.view.ui.home.setting.SettingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.paiwaddev.kmids.kmidsmobile.view.ui.home.logout.LogoutFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_logout" />
</navigation>